--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -64,3 +64,9 @@ select:focus[data-flux-control] {
 /* \[:where(&)\]:size-4 {
     @apply size-4;
 } */
+
+@layer utilities {
+    .mouse-pointer {
+        @apply cursor-pointer;
+    }
+}
